--- a/itemV2.cfg
+++ b/itemV2.cfg
@@ -1,9 +1,39 @@
-title = "Fly You Fools 2";
-description = "Fly You Fools 2 description";
+title = "Fly You Fools 2 Beta";
+description = "
+DISCLAIMER: It is recommended to disable any other flight mod to make this one works.
+\n
+Fly You Fools 2nd edition (also called FYF - named after a Lord of the Rings reference) - Flight Mod. This mod is acting as a beta (or a preview). After a period of time and bugfixing if necessary, FYF will be updated with FYF 2nd edition and this mod will disappear.
+Remarks, bug reports or suggestions for new features are highly appreciated: contact me on Discord (Uganda#4769) or write something in the comment section!
+\n
+It features:
+- Flight toggle using custom keybind (F4 to set it up).
+- 1st person flight mode.
+- 6 DoF camera and movement (including Up/Down using Crouch/Jump keys).
+- User standard FoV or custom in-flight FoV.
+- Adjustable flight speed modifier and speed step modifier using mouse wheel.
+- Adjustable, optional and customizable UI widget to display flight informations.
+- Option to hide HUD, player model arms and weapons.
+- Invisibility, invincibility and zero collision through environment nor living objects.
+- Prevent your character from dying to death walls. Works both on host and clients.
+- Prevent bugs by deactivating flight when a game is ending (session launch, defeat, win, restart).
+\n
+You are now able to fly out of these following state (death is not a valid state for activating flight):
+- Transported by an unit (like an elevator)
+- Hooked by a packmaster (even hanging from the hook)
+- Hanging to a ledge
+- Grabbed by chaos spawn
+- Catapulted
+- Distracted by flies
+- Overcharging
+- Waiting for respawn
+- Knocked down
+\n
+Thanks to: members from the VT Modders Discord for the help when needed and to feedbackers!
+";
 preview = "item_preview.png";
 content = "bundleV2";
 language = "english";
-visibility = "private";
+visibility = "public";
 published_id = 2889071425L;
 apply_for_sanctioned_status = false;
 tags = [ ];
